--- a/public/index.html
+++ b/public/index.html
@@ -14,10 +14,12 @@
     <link rel="stylesheet" href="/styles/header.css" type="text/css" />
     <link rel="stylesheet" href="/styles/new-tweet.css" type="text/css" />
     <link rel="stylesheet" href="/styles/tweet.css" type="text/css" />
+    <link rel="stylesheet" href="/styles/new-tweet-error.css" type="text/css" />\
 
     <!-- External JS -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://kit.fontawesome.com/bec24fd954.js" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/timeago.js/4.0.2/timeago.min.js" integrity="sha512-SVDh1zH5N9ChofSlNAK43lcNS7lWze6DTVx1JCXH1Tmno+0/1jMpdbR8YDgDUfcUrPp1xyE53G42GFrcM0CMVg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
     <!-- App JS -->
     <script type="text/javascript" src="/scripts/client.js"></script>
@@ -47,6 +49,12 @@
     <!-- Page-specific (main) content here -->
     <main class="container">
       <section class="new-tweet">
+        <section id="new-tweet-error">
+          <div class="error container flex-container-row">
+            <i class="text-red fas fa-exclamation-circle"></i>
+            <p id="'new-tweet-err-msg" class="text-red"></p>
+          </div>
+        </section>
         <h2>Compose Tweet</h2>
         <form action="/tweets" method="POST">
           <label class="tweet-label" for="tweet-text">What are you humming about?</label>
