--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="/styles/header.css" type="text/css" />
     <link rel="stylesheet" href="/styles/new-tweet.css" type="text/css" />
     <link rel="stylesheet" href="/styles/tweet.css" type="text/css" />
-    <link rel="stylesheet" href="/styles/new-tweet-error.css" type="text/css" />\
+    <link rel="stylesheet" href="/styles/new-tweet-error.css" type="text/css" />
     <link rel="stylesheet" href="/styles/media-queries.css" type="text/css"/>
     
     <!-- External JS -->
@@ -51,14 +51,14 @@
     <!-- Page-specific (main) content here -->
     <main class="container">
       <section id="new-tweet-form" class="new-tweet">
-        <section id="new-tweet-error">
-          <div class="error container flex-container-row">
-            <i class="text-red fas fa-exclamation-circle"></i>
-            <p id="'new-tweet-err-msg" class="text-red"></p>
+        <section id="new-tweet-err" class="error-container" style="display:none">
+          <div class="errorText flex-container-row">
+            <i class="red-text fas fa-exclamation-circle"></i>
+            <p id="new-tweet-err-msg" class="red-text"></p>
           </div>
         </section>
 
-        <form action="/tweets/" method="POST">
+        <form action="/tweets" method="POST">
           <label class="tweet-label" for="tweet-text">What are you humming about?</label>
           <textarea name="text" id="tweet-text"></textarea>
           <div class="submit-and-display">
